Prevent hz overflow scrolling and add background color to gallery to add distinction to sections.

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -92,6 +92,7 @@ section {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	overflow-x: hidden;
 }
 
 section .slide {
@@ -168,6 +169,7 @@ section h2 {
 	margin: 0 auto;
 	text-align: center;
 	padding: 2rem 0;
+	background-color: #fafafa;
 }
 
 #gallery-images {
@@ -184,7 +186,7 @@ section h2 {
 }
 
 #contact {
-	background-color: #fafafa;
+
 }
 
 .button {
@@ -369,7 +371,4 @@ form .contact-button {
 		width: 120px;
 	}
 
-	footer {
-		padding-top: 2rem;
-	}
 }
